--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,9 @@
 PORT=5000
-DB_HOST=localhost
+DB_HOST=turntable.proxy.rlwy.net
+DB_PORT=50059
 DB_USER=root
-DB_PASSWORD=@Gunther89089
-DB_NAME=hifix_db
+DB_PASSWORD=ALVRgVVTODcyiPAKaiUoHZQkeZLIXebm
+DB_NAME=railway
 JWT_SECRET=your-secret-key-here
 JWT_EXPIRE=30d
 
